[package]
name = "mailbox_rs"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["unstable"], optional = true }
futures = { version = "0.3", optional = true }
nom = {version = "6", optional = true }
spin = { version = "0.7", optional = true }
nb = { version = "1", optional = true }
xmas-elf = { version = "0.7.0", optional = true }
shellexpand = { version = "2.1.0", optional = true }
yaml-rust = { version = "0.4", optional = true }
paste =  { version = "1", optional = true }


[features]
std = ["async-std", "futures", "nom", "xmas-elf", "shellexpand", "yaml-rust", "paste"]
no_std = ["spin", "nb"]
ptr64 = []
ptr32 = []
ptrhost = []