[package]
name = "mailbox_rs"
version = "0.2.0"
rust-version = "1.80"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["unstable"], optional = true }
futures =  { version = "0.3", optional = true }
spin = { version = "0.9", optional = true }
nb = { version = "1", optional = true }
xmas-elf = { version = "0.9", optional = true }
shellexpand = { version = "3.1", optional = true }
yaml-rust = { version = "0.4", optional = true }
paste =  { version = "1", optional = true }
konst = "0.3"

[features]
std = ["async-std", "futures", "xmas-elf", "shellexpand", "yaml-rust", "paste"]
no_std = ["spin", "nb"]
ptr64 = []
ptr32 = []
ptrhost = []
cache_line_32 =[]
cache_line_64 =[]
cache_line_128 =[]
cache_line_256 =[]
